# libkwargs

./: CMakeLists.txt  README.dev.md  README.md
include/kwargs/: kwargs.h
man/kwargs/: CMakeLists.txt  kwargs.3  kwargs_create.3  kwargs_destroy.3  kwargs_get_optional_value.3  kwargs_get_positional_value.3  kwargs_get_required_value.3  kwargs_has_flag.3  kwargs_has_optional.3  kwargs_print_classifications.3  kwargs_requires_help.3
src/example/: CMakeLists.txt  main.c
src/kwargs/: kwargs.c  protected.c  protected.h
